# poc

./: .gitignore  .vimrc  .ycm_extra_conf.py  LICENSE  README.md  monkey_patch.lua  update-vbox.sh
asyncdotnet/: .vimrc  Makefile  asyncdotnet-mono.sln  asyncdotnet.sln  cli.lua  hello.cs  notes.txt
asyncdotnet/src/: Foo.cs  Getopt.cs  Program.cs  async-mono.csproj  async.csproj  hex.cs  iworker.cs  latency.cs  mcu.cs  nlog.config  tcp-server.cs  utils.cs  worker-pingserver.cs  worker-redis-server.cs
dynamic-proxy/: Makefile  top.sln
dynamic-proxy/src/: DynamicProxyTest.cs  IProxyInvocationHandler.cs  MetaDataFactorycs.cs  Program.cs  ProxyFactorycs.cs  SecurityManager.cs  SecurityProxy.cs  main.csproj  reflection-service.csproj  utils.cs
fork-cost/: .gitignore  Makefile  fork-cost.c  thread-cost.c
hot-deployment/: hot-deployment.sln
hot-deployment/NewPlugin/: NewPlugin.csproj  Plugin2.cs
hot-deployment/NewPlugin/Properties/: AssemblyInfo.cs
hot-deployment/Plugin/: Plugin.csproj
hot-deployment/Plugin/Properties/: AssemblyInfo.cs
hot-deployment/Plugin/src/: IPlugin.cs
hot-deployment/PluginProxy/: PluginProxy.csproj
hot-deployment/PluginProxy/Properties/: AssemblyInfo.cs
hot-deployment/PluginProxy/src/: PluginProxy.cs
hot-deployment/PrimaryPlugin/: PrimaryPlugin.csproj
hot-deployment/PrimaryPlugin/Properties/: AssemblyInfo.cs
hot-deployment/PrimaryPlugin/src/: PlainPLugin.cs
hot-deployment/hot-deployment/: hot-deployment.csproj
hot-deployment/hot-deployment/Properties/: AssemblyInfo.cs
hot-deployment/hot-deployment/src/: Const.cs  Program.cs
lua-interop/: .ycm_extra_conf.py  Makefile  README.md  env.lua
lua-interop/src/: Makefile  log.h  t.c
mcsp-service/: Makefile  top.sln
mcsp-service/src/: Foo.cs  Program.cs  main.csproj  mcsp.cs
mcsp-service/src/dynamic-proxy/: ProxyFactorycs.cs  SecurityProxy.cs  utils.cs
mem-layout/: .gitignore  Makefile  README.md  backtrace.c  mem-layout.c  raii.c
nested_function/: SConstruct  nested_function.c
scons/: .gitignore  Makefile  SConstruct
scons/logger/: SConscript  config.h  logger.c  logger.lo
scons/src/: SConscript  t.c
smart-poiner/: .gitignore  SConstruct  pre-install.sh  smart_pointer.c
socks5-proto/: dump-socks5-proto.lua
staticblock-poc/: pom.xml  run.sh
staticblock-poc/src/main/java/com/qk/staticblock/: App.java  Bar.java  Foo.java
staticblock-poc/src/test/java/com/qk/staticblock/: AppTest.java
utils/: .gitignore  CMakeLists.txt  Makefile  cp.txt  make.aliases  orig.pom.xml  pom.xml
utils/etc/vscode/: activate
utils/src/main/java/com/nci/apps/: App.java  DumpClassPath.java  HelloWorld.java
utils/src/main/java/com/nci/utils/: BuildInfo.java  CodeGenHelper.java  Constants.java  FakeException.java  FakeRAII.java  GCChecker.java  Helper.java  IdentifyJvmArgs.java  JVMVersion.java  LogBuilder.java  StringTemplate.java  Timming.java
utils/src/main/java/com/nci/utils/pojo/: StackTraceElementPOJO.java
utils/src/main/jni/: com_nci_utils_Helper.c  com_nci_utils_Helper.h
utils/src/main/jni/include/: config.h.cmake
utils/src/main/lombok/com/nci/utils/pojo/: StackTraceElementBean.java  TplTuple.java
utils/src/main/resources/: logback.xml
utils/src/test/java/com/nci/utils/: AppTest.java
